Reduced unneccessary flags

--- a/hello-world/serverside/Makefile
+++ b/hello-world/serverside/Makefile
@@ -1,5 +1,5 @@
 build:
-	emcc add.c -Os -s WASM=1 -s SIDE_MODULE=1 -s EXPORTED_FUNCTIONS='["_add"]' -o add.wasm
+	emcc add.c -Os -s WASM=1 -s EXPORTED_FUNCTIONS='["_add"]' -o add.wasm
 
 run:
 	make build
