Adjusted C version of clientside addition

--- a/hello-world-in-c/clientside/Makefile
+++ b/hello-world-in-c/clientside/Makefile
@@ -3,7 +3,7 @@ default:
 	make run
 
 build:
-	emcc hello.c -o hello.html
+	emcc add.c -o add.html -s EXPORTED_FUNCTIONS='["_add"]' -s EXTRA_EXPORTED_RUNTIME_METHODS='["ccall", "cwrap"]'
 
 run:
 	emrun --no_browser --port 8000 .
